all pages + responsive after bilan

--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="responsive.css" />
+    <title>Contact</title>
   </head>
   <body>
     <header>
       <div id="header">
         <a href="./index.html" id="header-container-logo" class="pulse">
-        <img
-          id="header-logo"
-          src="./assets/img/logomark.png"
-          alt="logomark de l'entreprise Nathalie Jochum"
-        />        
+          <img
+            id="header-logo"
+            src="./assets/img/logomark.png"
+            alt="logomark de l'entreprise Nathalie Jochum"
+          />
         </a>
-  
         <nav>
           <a href="./index.html">Accueil</a>
           <a href="./galerie.html">Galerie</a>
@@ -27,5 +32,21 @@
         </nav>
       </div>
     </header>
+    <main>
+      <h1>Coordonnées</h1>
+      <article id="contact">
+        <div>
+          <p>
+            Nathalie Jochum
+            <br />
+            15 rue Charles Louis de France <br />57070 Saint-Julien-Lès-Metz
+            <br />Tel : 07 62 11 45 32
+          </p>
+        </div>
+        <div id="container-carte">
+          <img id="carte" src="./assets/img/carte.png" alt="Emplacement " />
+        </div>
+      </article>
+    </main>
   </body>
 </html>
