--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="accueil.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="accueil.css">
+    <link rel="stylesheet" href="responsive.css" />
+
     <title>Nathalie Jochum La Trame à Metz</title>
   </head>
   <body>
     <header>
       <div id="header">
         <a href="./index.html" id="header-container-logo" class="pulse">
-          <img
-            id="header-logo"
-            src="./assets/img/logomark.png"
-            alt="logomark de l'entreprise Nathalie Jochum"
-          />
+          <img id="header-logo" src="./assets/img/logomark.png" alt="logomark de l'entreprise Nathalie Jochum">
         </a>
         <nav>
           <a href="./index.html">Accueil</a>
@@ -36,86 +31,48 @@
         <!-- Section Présentation -->
         <section id="presentation">
           <div id="presentation-container-logo">
-            <img
-              id="presentation-logo"
-              src="./assets/img/vertical_blanc.png"
-              alt="logo vertical de l'entreprise Nathalie Jochum"
-            />
+            <img id="presentation-logo" src="./assets/img/vertical_blanc.png" alt="logo vertical de l'entreprise Nathalie Jochum">
           </div>
 
           <article>
             <h1>Le Soin Vibratoire La TRAME à Metz, un bien pour l'Être</h1>
             <p>
-              Notre corps, tel un instrument de musique, peut parfois se
-              désaccorder. La Trame est une pratique qui va lui permettre de
-              retrouver sa vibration initiale.
+              Notre corps, tel un instrument de musique, peut parfois se désaccorder. La Trame est une pratique qui va lui permettre de retrouver sa vibration initiale.
             </p>
             <h2>Venez à mon cabinet à Metz, me retrouver pour une séance</h2>
-
-            <!-- Bouton -->
-            <button id="show-number-btn">Voir le numéro de téléphone</button>
-
-            <!-- Emplacement pour afficher le numéro -->
-            <p
-              id="phone-number"
-              style="
-                display: none;
-                font-size: 1.2em;
-                color: #9d6faf;
-                margin-top: 10px;
-              "
-            >
-              Nathalie Jochum - 07 62 11 45 32
-            </p>
+            <p>Nathalie Jochum <br> 07 62 11 45 32</p>
           </article>
         </section>
       </section>
+
       <!-- Section Qui suis-je -->
       <section id="section1">
-        <img id="nathalie" src="./assets/img/moi.jpg" alt="Nathalie Jochum" />
+        <img id="nathalie" src="./assets/img/moi.jpg" alt="Nathalie Jochum">
         <article>
           <h2>Qui suis-je</h2>
           <p>
-            Je suis Nathalie Jochum, thérapeute certifiée depuis 2017 en soin
-            vibratoire la TRAME. Voici une devise que je chéris : « A cœur
-            vaillant rien d’impossible. » (Jacques Cœur)
+            Je suis Nathalie Jochum, thérapeute certifiée depuis 2017 en soin vibratoire la TRAME. Voici une devise que je chéris  : <br> « A cœur vaillant rien d’impossible. » (Jacques Cœur)
           </p>
           <p>
-            J’ai longtemps travaillé dans le domaine de la santé en tant que
-            statisticienne. Puis mes pas m’ont guidé vers le soin vibratoire la
-            Trame.
+            J’ai longtemps travaillé dans le domaine de la santé en tant que statisticienne. Puis mes pas m’ont guidé vers le soin vibratoire la Trame.
           </p>
           <p>
-            J’adore ce soin car il permet d’obtenir des résultats rapides pour
-            évacuer des blocages psychiques tout en donnant un nouvel élan de
-            vie. On sent bien qu’il nous manque parfois cette impulsion pour
-            avancer et être à sa juste place.
+            J’adore ce soin car il permet d’obtenir des résultats rapides pour évacuer des blocages psychiques tout en donnant un nouvel élan de vie.<br> <br> On sent bien qu’il nous manque parfois cette impulsion pour avancer et être à sa juste place.
           </p>
         </article>
       </section>
 
       <!-- Section Qu’est-ce qu’une Trame -->
       <section id="section2" class="background">
-        <div class="articles">
+
           <section>
             <article>
               <h2>Qu’est-ce qu’une Trame</h2>
               <p>
-                La Trame a été mise au point par Patrick Burensteinas en 1990.
-                Scientifique et alchimiste, ses travaux sur la matière l’ont
-                amené à mettre en évidence un plan d’information nécessaire au
-                bon fonctionnement du corps. Ce plan peut se représenter sous la
-                forme d’un canevas, tels les fils de trame d’un tissu, d’où le
-                nom donné à la technique.
+                La Trame a été mise au point par Patrick Burensteinas en 1990. Scientifique et alchimiste, ses travaux sur la matière l’ont amené à mettre en évidence un plan d’information nécessaire au bon fonctionnement du corps. Ce plan peut se représenter sous la forme d’un canevas, tels les fils de trame d’un tissu, d’où le nom donné à la technique.
               </p>
               <p>
-                A la naissance, la Trame de chacun est en équilibre, puis au
-                cours de la vie, des agents extérieurs vont venir interférer
-                avec elle. Le principe de ce soin est de remettre en place le
-                schéma initial du corps. La Trame libère les émotions
-                cristallisées et les blocages, créant une circulation
-                harmonieuse de l’énergie et de l’information. L’harmonie est la
-                base de notre équilibre et de notre santé.
+                A la naissance, la Trame de chacun est en équilibre, puis au cours de la vie, des agents extérieurs vont venir interférer avec elle. Le principe de ce soin est de remettre en place le schéma initial du corps. La Trame libère les émotions cristallisées et les blocages, créant une circulation harmonieuse de l’énergie et de l’information. L’harmonie est la base de notre équilibre et de notre santé.
               </p>
             </article>
           </section>
@@ -125,74 +82,53 @@
             <article>
               <h2>Qu’attendre du Soin Vibratoire Trame</h2>
               <p>
-                Au cours des séances, vous prendrez conscience que des émotions,
-                des habitudes physiques ou psychiques qui polluent votre
-                quotidien tendent à s’évacuer, à se fluidifier. Vous allez
-                progressivement vous remettre aux commandes de votre vie. Vous
-                allez progressivement vous sentir mieux dans votre corps et dans
-                votre tête.
+                Au cours des séances, vous prendrez conscience que des émotions, des habitudes physiques ou psychiques qui polluent votre quotidien tendent à s’évacuer, 
+                à se fluidifier.            
               </p>
-              <p>
-                Vous allez progressivement voir émerger de nouveaux potentiels.
-                L’homme renoue un dialogue harmonieux avec la nature, l’univers
-                et lui-même.
-              </p>
+              <p>Vous allez progressivement vous remettre aux commandes de votre vie.  </p>
+              <p>Vous allez progressivement vous sentir mieux dans votre corps et dans votre tête.</p>
+              <p>Vous allez progressivement voir émerger de nouveaux potentiels. </p>
+              <p>L’homme renoue un dialogue harmonieux avec la nature, l’univers et lui-même.</p>
             </article>
           </section>
-        </div>
-        <div>
-          <img id="papillon" src="./assets/img/papillon.jpg" alt="" />
-        </div>
+
       </section>
 
       <!-- Section Séance -->
       <section id="section3">
         <div class="sections-seance">
-        <!-- Section La Séance -->
-        <section>
-          <article>
-            <h2>La Séance</h2>
-            <p>
-              La séquence de 16 gestes, toujours la même, permet d’informer le
-              corps sur ce qu’il doit faire, tout en lui laissant l’initiative.
-              En moyenne, 3 ou 4 séances sont nécessaires pour que la personne
-              ressente les effets de rééquilibrage de sa Trame. Ensuite, en
-              fonction de sa démarche, les séances peuvent être plus nombreuses.
-            </p>
-          </article>
-        </section>
+          <!-- Section La Séance -->
+          <section>
+            <article>
+              <h2>La Séance</h2>
+              <p>
+                La séquence de 16 gestes, toujours la même, permet d’informer le corps sur ce qu’il doit faire, tout en lui laissant l’initiative. En moyenne, 3 ou 4 séances sont nécessaires pour que la personne ressente les effets de rééquilibrage de sa Trame. Ensuite, en fonction de sa démarche, les séances peuvent être plus nombreuses.
+              </p>
+            </article>
+          </section>
 
-        <!-- Section Temps entre les séances -->
-        <section>
-          <article>
-            <h2>Combien de temps faut-il laisser entre les séances</h2>
-            <p>
-              Quel que soit le but recherché, il est important de respecter un
-              minimum de 3 à 4 semaines entre les séances. Pourquoi ? La Trame
-              rétablit le schéma de cohérence du corps et il faut un certain
-              temps pour qu’il puisse enregistrer et suivre les nouvelles
-              informations.
-            </p>
-          </article>
-        </section></div>
+          <!-- Section Temps entre les séances -->
+          <section>
+            <article>
+              <h2>Combien de temps faut-il laisser entre les séances</h2>
+              <p>
+                Quel que soit le but recherché, il est important de respecter un minimum de 3 à 4 semaines entre les séances. Pourquoi ? La Trame rétablit le schéma de cohérence du corps et il faut un certain temps pour qu’il puisse enregistrer et suivre les nouvelles informations.
+              </p>
+            </article>
+          </section>
+        </div>
 
         <!-- Section Comment se passe la séance -->
-        <section>
+        <section id="section-cabinet">
+          <img id="cabinet" src="./assets/img/cabinet.jpg" alt="cabinet de Nathalie Jochum">
           <article>
             <h2>Comment se passe la séance</h2>
             <p>
-              La durée d’une séance est de 45 minutes. Le patient est habillé,
-              allongé et confortablement installé. Le praticien procède au soin
-              vibratoire Trame dans un léger toucher sur le tronc, les pieds et
-              la tête.
+              La durée d’une séance est de 45 minutes. Le patient est habillé, allongé et confortablement installé. Le praticien procède au soin vibratoire Trame dans un léger toucher sur le tronc, les pieds et la tête.
             </p>
             <p><strong>Tarif : 60 €</strong></p>
             <p>
-              <em
-                >NB : La consultation d’un praticien de soin vibratoire la Trame
-                n’est en aucun cas un massage, une démarche médicale,
-                paramédicale, psychanalytique ou psychologique.</em
-              >
+              <em>NB : La consultation d’un praticien de soin vibratoire la Trame n’est en aucun cas un massage, une démarche médicale, paramédicale, psychanalytique ou psychologique.</em>
             </p>
             <p>A bientôt. Nathalie Jochum.</p>
           </article>
