--- a/index.html
+++ b/index.html
@@ -69,10 +69,15 @@
             <article>
               <h2>Qu’est-ce qu’une Trame</h2>
               <p>
-                La Trame a été mise au point par Patrick Burensteinas en 1990. Scientifique et alchimiste, ses travaux sur la matière l’ont amené à mettre en évidence un plan d’information nécessaire au bon fonctionnement du corps. Ce plan peut se représenter sous la forme d’un canevas, tels les fils de trame d’un tissu, d’où le nom donné à la technique.
+                La Trame a été mise au point par Patrick Burensteinas en 1990. 
+                Scientifique et alchimiste, ses travaux sur la matière l’ont amené à mettre en évidence un plan d’information nécessaire au bon fonctionnement du corps. 
+                <br> <br> Ce plan peut se représenter sous la forme d’un canevas, tels les fils de trame d’un tissu, d’où le nom donné à la technique.
               </p>
               <p>
-                A la naissance, la Trame de chacun est en équilibre, puis au cours de la vie, des agents extérieurs vont venir interférer avec elle. Le principe de ce soin est de remettre en place le schéma initial du corps. La Trame libère les émotions cristallisées et les blocages, créant une circulation harmonieuse de l’énergie et de l’information. L’harmonie est la base de notre équilibre et de notre santé.
+                A la naissance, la Trame de chacun est en équilibre, puis au cours de la vie, des agents extérieurs vont venir interférer avec elle. 
+                Le principe de ce soin est de remettre en place le schéma initial du corps. 
+                <br> <br> La Trame libère les émotions cristallisées et les blocages, créant une circulation harmonieuse de l’énergie et de l’information. 
+                L’harmonie est la base de notre équilibre et de notre santé.
               </p>
             </article>
           </section>
