update logo pulse

--- a/galerie.html
+++ b/galerie.html
@@ -20,7 +20,7 @@
         <a href="./index.html" id="header-container-logo" class="pulse">
           <img
             id="header-logo"
-            src="./assets/img/logomark.png"
+            src="./assets/img/logomark2.png"
             alt="logomark de l'entreprise Nathalie Jochum"
           />
         </a>
