--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div id="header">
         <a href="./index.html" id="header-container-logo" class="pulse">
-          <img id="header-logo" src="./assets/img/logomark.png" alt="logomark de l'entreprise Nathalie Jochum">
+          <img id="header-logo" src="./assets/img/logomark2.png" alt="logomark de l'entreprise Nathalie Jochum">
         </a>
         <nav>
           <a href="./index.html">Accueil</a>
