update logo pulse

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               Notre corps, tel un instrument de musique, peut parfois se désaccorder. La Trame est une pratique qui va lui permettre de retrouver sa vibration initiale.
             </p>
             <h2>Venez à mon cabinet à Metz, me retrouver pour une séance</h2>
-            <p>Nathalie Jochum <br> 07 62 11 45 32</p>
+            <p>Nathalie Jochum <br> 07 62 11 45 32 </p>
           </article>
         </section>
       </section>
@@ -99,7 +99,7 @@
 
       </section>
 
-      <!-- Section Séance -->
+      <!-- Section 3 -->
       <section id="section3">
         <div class="sections-seance">
           <!-- Section La Séance -->
