--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="accueil.css">
     <link rel="stylesheet" href="responsive.css" />
-
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
     <title>Nathalie Jochum La Trame à Metz</title>
   </head>
   <body>
