--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="responsive.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
     <title>Contact</title>
   </head>
   <body>
