--- a/galerie.html
+++ b/galerie.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
     <link rel="stylesheet" href="galerie.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
     <title>Galerie</title>
   </head>
   <body>
