--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contactez Nathalie Jochum, thérapeute en soin vibratoire La Trame à Metz. Découvrez les coordonnées et l'emplacement de son cabinet à Saint-Julien-Lès-Metz." />
+    <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +15,7 @@
     <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="responsive.css" />
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
-    <title>Contact</title>
+    <title>Contact | Nathalie Jochum - Soin Vibratoire La Trame à Metz</title>
   </head>
   <body>
     <header>
@@ -22,7 +24,7 @@
           <img
             id="header-logo"
             src="./assets/img/logomark2.png"
-            alt="logomark de l'entreprise Nathalie Jochum"
+            alt="Logo de l'entreprise Nathalie Jochum, spécialiste en soin vibratoire La Trame"
           />
         </a>
         <nav>
@@ -32,21 +34,41 @@
         </nav>
       </div>
     </header>
+
     <main>
-      <h1>Coordonnées</h1>
+      <div id="intro">
+      <h1>Contactez Nathalie Jochum, Thérapeute en Soin Vibratoire La Trame</h1>
+      <p>Pour toute information complémentaire sur les soins vibratoires La Trame à Metz, ou pour prendre rendez-vous, 
+        vous pouvez nous contacter en utilisant les coordonnées ci-dessous. 
+        <br>Nathalie Jochum vous accueille dans son cabinet situé à Saint-Julien-Lès-Metz, à proximité de Metz, pour des séances de soins personnalisées en toute tranquillité.</p>
+      </div>
       <article id="contact">
         <div>
+          <h2>Coordonnées de Nathalie Jochum</h2>
           <p>
-            Nathalie Jochum
-            <br />
-            15 rue Charles Louis de France <br />57070 Saint-Julien-Lès-Metz
-            <br />Tel : 07 62 11 45 32
+            Nathalie Jochum<br />
+            15 rue Charles Louis de France, 57070 Saint-Julien-Lès-Metz, France<br />
+            Téléphone : <a href="tel:+33762114532">07 62 11 45 32</a><br />
+            Email : <a href="mailto:jochumnathalie@gmail.com">jochumnathalie@gmail.com </a>
           </p>
         </div>
-        <div id="container-carte">
-          <img id="carte" src="./assets/img/carte.png" alt="Emplacement " />
+        
+        <div >
+          <div>
+          <h3>Emplacement du Cabinet</h3>
+          <p>Le cabinet est situé à Saint-Julien-Lès-Metz, facilement accessible depuis le centre-ville de Metz.
+             Vous trouverez l'emplacement exact sur la carte ci-dessous.</p>
+          <div id="container-carte">
+          <img id="carte" src="./assets/img/carte.png" alt="Emplacement du cabinet de Nathalie Jochum à Saint-Julien-Lès-Metz" />            
+          </div>
+
+          </div>
         </div>
       </article>
     </main>
+
+    <footer>
+      <p>&copy; 2024 Nathalie Jochum - Soin Vibratoire La Trame à Metz. Conçu et développé par <a href="https://ikaya-creation.fr/" target="_blank" rel="noopener noreferrer">Ikaya Création</a>.</p>
+    </footer>
   </body>
 </html>
