--- a/galerie.html
+++ b/galerie.html
@@ -56,7 +56,8 @@
 
       <section id="video">
         <h2>Découvrez La Trame en Vidéo</h2>
-        <p>Apprenez-en plus sur la pratique du soin vibratoire La Trame à travers cette vidéo de présentation, qui vous permettra de mieux comprendre cette approche unique et bénéfique pour le bien-être.</p>
+        <p>Découvrez la pratique du soin vibratoire La Trame à travers cette vidéo, 
+          pour mieux comprendre cette approche unique et bénéfique pour le bien-être.</p>
         <iframe
           id="video-presentation"
           src="https://www.youtube.com/embed/ns_JJ8z4FTQ"
@@ -70,7 +71,16 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Nathalie Jochum - Soin Vibratoire La Trame à Metz. Conçu et développé par <a href="https://ikaya-creation.fr/" target="_blank" rel="noopener noreferrer">Ikaya Création</a>.</p>
+      <p>
+        &copy; 2024 Nathalie Jochum - Soin Vibratoire La Trame à Metz. <br />
+        Conçu et développé par
+        <a
+          href="https://ikaya-creation.fr/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Ikaya Création</a
+        >.
+      </p>
     </footer>
     
   </body>
