--- a/index.html
+++ b/index.html
@@ -140,7 +140,16 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2024 Nathalie Jochum - Soin Vibratoire La Trame à Metz. Conçu et développé par <a href="https://ikaya-creation.fr/" target="_blank" rel="noopener noreferrer">Ikaya Création</a>.</p>
+      <p>
+        &copy; 2024 Nathalie Jochum - Soin Vibratoire La Trame à Metz. <br />
+        Conçu et développé par
+        <a
+          href="https://ikaya-creation.fr/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Ikaya Création</a
+        >.
+      </p>
     </footer>
     
 
