update texte after modifications clients

--- a/galerie.html
+++ b/galerie.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explorez la galerie de Nathalie Jochum, thérapeute en soin vibratoire La Trame à Metz. Découvrez des images de son cabinet, de son travail et une vidéo de présentation du soin La Trame." />
+    <meta name="description" content="Explorez la galerie de Nathalie Jochum, praticienne en soin vibratoire La Trame à Metz. Découvrez des images de son cabinet, de son travail et une vidéo de présentation du soin La Trame." />
     <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,11 +38,11 @@
     <main>
       <section id="gallery">
         <h1>Galerie de Nathalie Jochum</h1>
-        <p>Explorez une sélection d'images qui illustrent mon activité de thérapeute en soin vibratoire La Trame à Metz.</p>
+        <p>Explorez une sélection d'images qui illustrent mon activité de praticienne en soin vibratoire La Trame à Metz.</p>
         <div class="grid">
           <img
             src="./assets/img/moi.jpg"
-            alt="Nathalie Jochum, thérapeute spécialisée en soin vibratoire La Trame, en portrait"
+            alt="Nathalie Jochum, praticienne spécialisée en soin vibratoire La Trame, en portrait"
             loading="lazy"
           />
           <img
@@ -57,7 +57,7 @@
       <section id="video">
         <h2>Découvrez La Trame en Vidéo</h2>
         <p>Découvrez la pratique du soin vibratoire La Trame à travers cette vidéo, 
-          pour mieux comprendre cette approche unique et bénéfique pour le bien-être.</p>
+          pour mieux comprendre cette approche unique et bénéfique pour l'être.</p>
         <iframe
           id="video-presentation"
           src="https://www.youtube.com/embed/ns_JJ8z4FTQ"
