--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Contactez Nathalie Jochum, thérapeute en soin vibratoire La Trame à Metz. Découvrez les coordonnées et l'emplacement de son cabinet à Saint-Julien-Lès-Metz."
+      content="Contactez Nathalie Jochum, praticienne en soin vibratoire La Trame à Metz. Découvrez les coordonnées et l'emplacement de son cabinet à Saint-Julien-Lès-Metz."
     />
     <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -42,15 +42,15 @@
       <section>
       <div id="intro">
         <h1>
-          Contactez Nathalie Jochum, Thérapeute en Soin Vibratoire La Trame
+          Contactez Nathalie Jochum, Praticienne en Soin Vibratoire La Trame
         </h1>
         <p>
           Nathalie Jochum vous accueille dans son cabinet situé à
-          Saint-Julien-Lès-Metz, à proximité de Metz, pour des séances de soins
-          personnalisées en toute tranquillité.
+          Saint-Julien-Lès-Metz, à proximité de Metz, pour des séances de soin
+          en toute tranquillité.
           <br /><br />
           Pour toute information complémentaire sur les soins vibratoires La
-          Trame à Metz, ou pour prendre rendez-vous, vous pouvez nous contacter
+          Trame à Metz, ou pour prendre rendez-vous, vous pouvez la contacter
           en utilisant les coordonnées ci-dessous.
         </p>
       </div>
@@ -63,8 +63,8 @@
             France<br />
             Téléphone : <a href="tel:+33762114532">07 62 11 45 32</a><br />
             Email :
-            <a href="mailto:jochumnathalie@gmail.com"
-              >jochumnathalie@gmail.com
+            <a href="mailto:jochumnathalie@laposte.net"
+              >jochumnathalie@laposte.net
             </a>
           </p>
         </div>
