update texte and remove video

--- a/galerie.html
+++ b/galerie.html
@@ -54,7 +54,7 @@
         </div>
       </section>
 
-      <section id="video">
+      <!-- <section id="video">
         <h2>Découvrez La Trame en Vidéo</h2>
         <p>Découvrez la pratique du soin vibratoire La Trame à travers cette vidéo, 
           pour mieux comprendre cette approche unique et bénéfique pour l'être.</p>
@@ -67,7 +67,7 @@
           allowfullscreen
         >
         </iframe>
-      </section>
+      </section> -->
     </main>
 
     <footer>
