update texte section 2

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
               Au cours des séances, vous prendrez conscience que des <em>émotions</em>, des habitudes physiques ou psychiques qui polluent votre quotidien tendent à s’évacuer, 
               à se fluidifier.            
             </p>
-            <p>Vous allez progressivement <strong>vous remettre aux commandes de votre vie</strong>.</p>
-            <p>Vous allez progressivement vous sentir <em>mieux dans votre corps</em>.</p>
-            <p>Vous allez progressivement voir émerger de <strong>nouveaux potentiels</strong>.</p>
             <p>Vous allez progressivement <strong>retrouver le meilleur de vous-même</strong>.</p>
+            <p>Vous allez progressivement <strong>retrouver votre capacité à faire des choix</strong>.</p>
+            <p>Vous allez progressivement <strong>voir émerger de nouveaux potentiels</strong>.</p>
+
             <p>L’homme renoue un dialogue harmonieux avec <em>la nature, l’univers et lui-même</em>.</p>
           </article>
         </section>
